# function_utility

./: CMakeLists.txt  Doxyfile.in  Makefile  function_utility-config.cmake.in
cmake/: function_utility_deps.cmake
function_utility/: CMakeLists.txt  composite.hpp  config.hpp.in  constant.hpp  curry.hpp  function_utility-config.cmake.in  function_utility.hpp  identity.hpp  import.hpp  lazy.hpp  nsplit.hpp  power.hpp  select.hpp  static_application.hpp  static_curried.hpp  trampoline.hpp  values.hpp
function_utility_testing/: CMakeLists.txt  composite_test.cpp  constant_test.cpp  curry_test.cpp  lazy_test.cpp  partition_test.cpp  powerfunc_test.cpp  static_callable_test.cpp  static_curried_test.cpp  test_macros.hpp  trampoline_test.cpp  values_test.cpp
